# simple-proto-example

./: .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel  address_book.proto  readme.md  route_guide.proto
Media/: BUILD.bazel  media_service.proto
Post/: BUILD.bazel  post.proto
SampleProto/: address_book.proto  route_guide.proto
