load("@rules_java//java:defs.bzl", "java_proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "post_service_proto",
    srcs = ["post.proto"],
    deps = [
            "//Media:media_service_proto",
    ]
)

java_proto_library(
    name = "post_service_java_proto",
    deps = [":post_service_proto"],
)

java_grpc_library(
    name = "post_service_java_grpc",
    srcs = [":post_service_proto"],
    deps = [":post_service_java_proto"],
)